CONTRIB-2846: use correct name for Word style template (moodleQueston, not moodleQuiz)

--- a/wordfile_template.html
+++ b/wordfile_template.html
@@ -17,7 +17,7 @@
     <xml>
       <o:DocumentProperties xmlns:o="urn:schemas-microsoft-com:office:office">
         <o:Author><?replace insert-author?></o:Author>
-        <o:Template>moodleQuiz.dot</o:Template>
+        <o:Template>moodleQuestion.dot</o:Template>
         <o:LastAuthor><?replace insert-author?></o:LastAuthor>
         <o:Title><?replace insert-title?></o:Title>
         <o:Revision>1</o:Revision>
@@ -37,7 +37,7 @@
     </xml>
     <xml>
       <w:WordDocument xmlns:w="urn:schemas-microsoft-com:office:word">
-        <w:AttachedTemplate HRef="moodleQuiz.dot"/>
+        <w:AttachedTemplate HRef="moodleQuestion.dot"/>
         <!--
 <w:UpdateStylesOnOpen/>
  -->
