--- a/wordfile_template.html
+++ b/wordfile_template.html
@@ -1,4 +1,30 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
+<!-- 
+// This file is part of Moodle - http://moodle.org/
+//
+// Moodle is free software: you can redistribute it and/or modify
+// it under the terms of the GNU General Public License as published by
+// the Free Software Foundation, either version 3 of the License, or
+// (at your option) any later version.
+//
+// Moodle is distributed in the hope that it will be useful,
+// but WITHOUT ANY WARRANTY; without even the implied warranty of
+// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+// GNU General Public License for more details.
+//
+// You should have received a copy of the GNU General Public License
+// along with Moodle.  If not, see <http://www.gnu.org/licenses/>.
+
+// $Id: wordfile_template.html,v 1.2.2.1 2011/05/23 10:05:06 eoincampbell Exp $ 
+
+ * Word-compatible XHTML template into which questions can be poured as HTML tables
+ *
+ * @package questionbank
+ * @subpackage importexport
+ * @copyright 2010 Eoin Campbell
+ * @author Eoin Campbell
+ * @license   http://www.gnu.org/copyleft/gpl.html GNU GPL v3 or later (5)
+-->
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:o="urn:schemas-microsoft-com:office:office"
 	xmlns:w="urn:schemas-microsoft-com:office:word"
