Fix error in non-ASCII characters and alignment when exporting questions

--- a/wordfiletemplate.html
+++ b/wordfiletemplate.html
@@ -185,7 +185,7 @@ margin-top:0in;
 margin-right:0in;
 margin-bottom:0in;
 margin-left:0.25in;
-text-align:justify;
+text-align:left;
 text-indent:-0.25in;
 line-height:12.0pt;
 mso-pagination:widow-orphan;
@@ -201,7 +201,7 @@ margin-top:0in;
 margin-right:0in;
 margin-bottom:0in;
 margin-left:0.5in;
-text-align:justify;
+text-align:left;
 text-indent:-0.25in;
 line-height:12.0pt;
 mso-pagination:widow-orphan;
@@ -217,7 +217,7 @@ margin-top:0in;
 margin-right:0in;
 margin-bottom:0in;
 margin-left:0.75in;
-text-align:justify;
+text-align:left;
 text-indent:-0.25in;
 line-height:12.0pt;
 mso-pagination:widow-orphan;
@@ -233,7 +233,7 @@ margin-top:0in;
 margin-right:0in;
 margin-bottom:0in;
 margin-left:1in;
-text-align:justify;
+text-align:left;
 text-indent:-0.25in;
 line-height:12.0pt;
 mso-pagination:widow-orphan;
@@ -257,7 +257,7 @@ margin-top:0in;
 margin-right:0in;
 margin-bottom:0in;
 margin-left:0.25in;
-text-align:justify;
+text-align:left;
 text-indent:0.0in;
 line-height:11.0pt;
 mso-pagination:widow-orphan;
@@ -273,7 +273,7 @@ margin-top:0in;
 margin-right:0in;
 margin-bottom:0in;
 margin-left:0.25in;
-text-align:justify;
+text-align:left;
 text-indent:0;
 line-height:12.0pt;
 mso-pagination:widow-orphan;
@@ -287,7 +287,7 @@ margin-top:0in;
 margin-right:0in;
 margin-bottom:0in;
 margin-left:0.5in;
-text-align:justify;
+text-align:left;
 text-indent:-.25in;
 line-height:12.0pt;
 mso-pagination:widow-orphan;
@@ -303,7 +303,7 @@ margin-top:0in;
 margin-right:0in;
 margin-bottom:0in;
 margin-left:0.5in;
-text-align:justify;
+text-align:left;
 text-indent:0;
 line-height:12.0pt;
 mso-pagination:widow-orphan;
@@ -317,7 +317,7 @@ margin-top:0in;
 margin-right:0in;
 margin-bottom:0in;
 margin-left:0.75in;
-text-align:justify;
+text-align:left;
 text-indent:-.25in;
 line-height:12.0pt;
 mso-pagination:widow-orphan;
@@ -333,7 +333,7 @@ margin-top:0in;
 margin-right:0in;
 margin-bottom:0in;
 margin-left:0.75in;
-text-align:justify;
+text-align:left;
 text-indent:0;
 line-height:12.0pt;
 mso-pagination:widow-orphan;
@@ -347,7 +347,7 @@ margin-top:0in;
 margin-right:0in;
 margin-bottom:0in;
 margin-left:1in;
-text-align:justify;
+text-align:left;
 text-indent:-.25in;
 line-height:12.0pt;
 mso-pagination:widow-orphan;
@@ -363,7 +363,7 @@ margin-top:0in;
 margin-right:0in;
 margin-bottom:0in;
 margin-left:1in;
-text-align:justify;
+text-align:left;
 text-indent:0;
 line-height:12.0pt;
 mso-pagination:widow-orphan;
@@ -460,7 +460,7 @@ margin-top:0in;
 margin-right:0in;
 margin-bottom:0in;
 margin-left:0.25in;
-text-align:justify;
+text-align:left;
 text-indent:-.25in;
 line-height:12.0pt;
 mso-pagination:widow-orphan;
@@ -534,7 +534,7 @@ p.MsoFootnoteText, li.MsoFootnoteText, div.MsoFootnoteText
   margin-right:0in;
   margin-bottom:3.0pt;
   margin-left:0in;
-  text-align:justify;
+  text-align:left;
   line-height:12.0pt;
   mso-pagination:widow-orphan;
   mso-ansi-language:<?replace insert-language?>;
@@ -560,7 +560,7 @@ p.MsoNormal, li.MsoNormal, div.MsoNormal
   margin-right:0in;
   margin-bottom:3.0pt;
   margin-left:0in;
-  text-align:justify;
+  text-align:left;
   line-height:12.0pt;
   /* mso-line-height-rule:exactly; */
   mso-pagination:widow-orphan;
@@ -584,7 +584,7 @@ p.MsoBodyText, li.MsoBodyText, div.MsoBodyText
   margin-right:0in;
   margin-bottom:3.0pt;
   margin-left:0in;
-  text-align:justify;
+  text-align:left;
   text-indent:12.25pt;
   line-height:12.0pt;
   /* mso-line-height-rule:exactly; */
@@ -602,7 +602,7 @@ p.MsoBodyTextFirst, li.MsoBodyTextFirst, div.MsoBodyTextFirst
   margin-right:0in;
   margin-bottom:3.0pt;
   margin-left:0in;
-  text-align:justify;
+  text-align:left;
   line-height:12.0pt;
   /* mso-line-height-rule:exactly; */
   mso-pagination:widow-orphan;
@@ -618,7 +618,7 @@ p.BlockQuote, li.BlockQuote, div.BlockQuote
   margin-right:18.0pt;
   margin-bottom:3.0pt;
   margin-left:18.0pt;
-  text-align:justify;
+  text-align:left;
   line-height:12.0pt;
   mso-pagination:widow-orphan;
   mso-ansi-language:<?replace insert-language?>;
@@ -747,7 +747,7 @@ p.QFCaseStudy, li.QFCaseStudy, div.QFCaseStudy
   margin-right:0in;
   mso-margin-bottom-alt:auto;
   margin-left:0in;
-  text-align:justify;
+  text-align:left;
   line-height:11.0pt;
   /* mso-line-height-rule:exactly; */
   mso-pagination:widow-orphan;
@@ -760,7 +760,7 @@ p.QFAnswer, li.QFAnswer, div.QFAnswer
   margin-right:0in;
   mso-margin-bottom-alt:auto;
   margin-left:0in;
-  text-align:justify;
+  text-align:left;
   line-height:12.0pt;
   /* mso-line-height-rule:exactly; */
   mso-pagination:widow-orphan;
