Improve handling of exported images to avoid bookmark name clashes

--- a/wordfiletemplate.html
+++ b/wordfiletemplate.html
@@ -116,7 +116,7 @@ h1
   font-family:Arial;
   mso-font-kerning:0pt;
   mso-ansi-language:<?replace insert-language?>;
-  font-weight:normal;}
+  font-weight:bold;}
 h2
   {mso-style-next:"Body Text Indent";
   margin-top:12.0pt;
@@ -131,7 +131,7 @@ h2
   font-size:13.0pt;
   font-family:Arial;
   mso-ansi-language:<?replace insert-language?>;
-  font-weight:normal;}
+  font-weight:bold;}
 h3
 {
 mso-style-next:"Body Text Indent";
@@ -146,7 +146,8 @@ font-family:"Arial";
 mso-style-name:"Heading 3";
 font-size:11.0pt;
 mso-ansi-language:<?replace insert-language?>;
-mso-list:l1 level3 lfo1;}
+mso-list:l1 level3 lfo1;
+font-weight:bold;}
 h4
 {
 mso-style-next:"Body Text Indent";
@@ -160,7 +161,7 @@ page-break-after:avoid;
 font-family:"Arial";
 mso-style-name:"Heading 4";
 font-size:11.0pt;
-font-weight:normal;
+font-weight:bold;
 mso-ansi-language:<?replace insert-language?>;
 mso-list:l1 level4 lfo1;}
 h5
